--- a/model/create_model.ipynb
+++ b/model/create_model.ipynb
@@ -179,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save('/Users/toni/Documents/my_model.h5')"
+    "model.save('model/my_model.h5')"
    ]
   }
  ],
